--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
     </head>
     <body>
         <h1>看到这个说明你的网页可以正常访问
+        <img src="graduate.png" width="100%" height="100%">
     </body>
 </html>
