--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
         <meta charset="UTF-8">
     </head>
     <body>
-        <h1>看到这个说明你的网页可以正常访问
-        <img src="graduate.png" width="100%" height="100%">
+        <img src="graduate.png" width="100px" height="100px">
     </body>
 </html>
