--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
         <meta charset="UTF-8">
     </head>
     <body>
-        <img src="graduate.png" width="100px" height="100px">
+        <img src="graduate.png" width="100%" height="100%">
     </body>
 </html>
