--- a/index.html
+++ b/index.html
@@ -4,6 +4,22 @@
         <meta charset="UTF-8">
     </head>
     <body>
-        <img src="graduate.png" width="100%" height="100%">
+         <svg width="500" height="75">
+            <circle cx="30" cy="30" r="25" style="stroke: none; fill: #ebdd22;">
+                <!-- <animate attributeName="cx" attributeType="XML"
+                         from="30"  to="470"
+                         begin="0s" dur="5s"
+                         fill="freeze" repeatCount="2"/> -->
+                <animate attributeName="opacity" fill="freeze" dur="0.5" begin="click+0.5s" from="0" to="1"></animate>
+            </circle>
+            <circle cx="30" cy="30" r="25" style="stroke: none; fill: #0000ff;">
+                <!-- <animate attributeName="cx" attributeType="XML"
+                         from="30"  to="470"
+                         begin="0s" dur="5s"
+                         fill="freeze" repeatCount="2"/> -->
+                <animate attributeName="opacity" fill="freeze" dur="0.5" begin="click" from="1" to="0"></animate>
+            </circle>
+            
+        </svg>
     </body>
 </html>
